crates/ty_python_semantic/resources/mdtest/snapshots/override.md_-_`typing.override`_-_Basics_(b7c220f8171f11f0).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: override.md - `typing.override` - Basics
mdtest path: crates/ty_python_semantic/resources/mdtest/override.md
---

# Python source files

## mdtest_snippet.pyi

```
  1 | from typing_extensions import Any, Callable, TypeVar, override
  2 | 
  3 | # Decorator intentionally erases the wrapped signature.
  4 | def lossy_decorator(fn: Callable[..., Any]) -> Callable[..., Any]: ...
  5 | 
  6 | class A:
  7 |     @override
  8 |     def __repr__(self): ...  # fine: overrides `object.__repr__`
  9 | 
 10 | class Parent:
 11 |     def foo(self): ...
 12 |     @property
 13 |     def my_property1(self) -> int: ...
 14 |     @property
 15 |     def my_property2(self) -> int: ...
 16 | 
 17 |     baz = None
 18 | 
 19 |     @classmethod
 20 |     def class_method1(cls) -> int: ...
 21 |     @staticmethod
 22 |     def static_method1() -> int: ...
 23 |     @classmethod
 24 |     def class_method2(cls) -> int: ...
 25 |     @staticmethod
 26 |     def static_method2() -> int: ...
 27 |     @lossy_decorator
 28 |     def decorated_1(self): ...
 29 |     @lossy_decorator
 30 |     def decorated_2(self): ...
 31 |     @lossy_decorator
 32 |     def decorated_3(self): ...
 33 | 
 34 | class Child(Parent):
 35 |     @override
 36 |     def foo(self): ...  # fine: overrides `Parent.foo`
 37 |     @property
 38 |     @override
 39 |     def my_property1(self) -> int: ...  # fine: overrides `Parent.my_property1`
 40 |     @override
 41 |     @property
 42 |     def my_property2(self) -> int: ...  # fine: overrides `Parent.my_property2`
 43 |     @override
 44 |     def baz(self): ...  # fine: overrides `Parent.baz`
 45 |     @classmethod
 46 |     @override
 47 |     def class_method1(cls) -> int: ...  # fine: overrides `Parent.class_method1`
 48 |     @staticmethod
 49 |     @override
 50 |     def static_method1() -> int: ...  # fine: overrides `Parent.static_method1`
 51 |     @override
 52 |     @classmethod
 53 |     def class_method2(cls) -> int: ...  # fine: overrides `Parent.class_method2`
 54 |     @override
 55 |     @staticmethod
 56 |     def static_method2() -> int: ...  # fine: overrides `Parent.static_method2`
 57 |     @override
 58 |     def decorated_1(self): ...  # fine: overrides `Parent.decorated_1`
 59 |     @override
 60 |     @lossy_decorator
 61 |     def decorated_2(self): ...  # fine: overrides `Parent.decorated_2`
 62 |     @lossy_decorator
 63 |     @override
 64 |     def decorated_3(self): ...  # fine: overrides `Parent.decorated_3`
 65 | 
 66 | class OtherChild(Parent): ...
 67 | 
 68 | class Grandchild(OtherChild):
 69 |     @override
 70 |     def foo(self): ...  # fine: overrides `Parent.foo`
 71 |     @override
 72 |     @property
 73 |     def my_property1(self) -> int: ...  # fine: overrides `Parent.my_property1`
 74 |     @override
 75 |     def baz(self): ...  # fine: overrides `Parent.baz`
 76 |     @classmethod
 77 |     @override
 78 |     def class_method1(cls) -> int: ...  # fine: overrides `Parent.class_method1`
 79 |     @staticmethod
 80 |     @override
 81 |     def static_method1() -> int: ...  # fine: overrides `Parent.static_method1`
 82 |     @override
 83 |     @classmethod
 84 |     def class_method2(cls) -> int: ...  # fine: overrides `Parent.class_method2`
 85 |     @override
 86 |     @staticmethod
 87 |     def static_method2() -> int: ...  # fine: overrides `Parent.static_method2`
 88 |     @override
 89 |     def decorated_1(self): ...  # fine: overrides `Parent.decorated_1`
 90 |     @override
 91 |     @lossy_decorator
 92 |     def decorated_2(self): ...  # fine: overrides `Parent.decorated_2`
 93 |     @lossy_decorator
 94 |     @override
 95 |     def decorated_3(self): ...  # fine: overrides `Parent.decorated_3`
 96 | 
 97 | class Invalid:
 98 |     @override
 99 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
100 |     @override
101 |     @classmethod
102 |     def foo(self): ...  # error: [invalid-explicit-override]
103 |     @classmethod
104 |     @override
105 |     def bar(self): ...  # error: [invalid-explicit-override]
106 |     @staticmethod
107 |     @override
108 |     def baz(): ...  # error: [invalid-explicit-override]
109 |     @override
110 |     @staticmethod
111 |     def eggs(): ...  # error: [invalid-explicit-override]
112 |     @property
113 |     @override
114 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
115 |     @override
116 |     @property
117 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
118 |     @property
119 |     @override
120 |     def bad_settable_property(self) -> int: ...  # error: [invalid-explicit-override]
121 |     @bad_settable_property.setter
122 |     def bad_settable_property(self, x: int) -> None: ...
123 |     @lossy_decorator
124 |     @override
125 |     def lossy(self): ...  # error: [invalid-explicit-override]
126 |     @override
127 |     @lossy_decorator
128 |     def lossy2(self): ...  # error: [invalid-explicit-override]
129 | 
130 | # TODO: all overrides in this class should cause us to emit *Liskov* violations,
131 | # but not `@override` violations
132 | class LiskovViolatingButNotOverrideViolating(Parent):
133 |     @override
134 |     @property
135 |     def foo(self) -> int: ...
136 |     @override
137 |     def my_property1(self) -> int: ...
138 | 
139 |     # TODO: This maybe shouldn't be a Liskov violation? Whether called on the type or
140 |     # on an instance, it will behave the same from the caller's perspective. The only difference
141 |     # is whether the method body gets access to `cls`, which is not a concern of Liskov.
142 |     @staticmethod
143 |     @override
144 |     def class_method1() -> int: ...  # error: [invalid-method-override]
145 |     @classmethod
146 |     @override
147 |     def static_method1(cls) -> int: ...
148 | 
149 | # Diagnostic edge case: `override` is very far away from the method definition in the source code:
150 | 
151 | T = TypeVar("T")
152 | 
153 | def identity(x: T) -> T: ...
154 | 
155 | class Foo:
156 |     @override
157 |     @identity
158 |     @identity
159 |     @identity
160 |     @identity
161 |     @identity
162 |     @identity
163 |     @identity
164 |     @identity
165 |     @identity
166 |     @identity
167 |     @identity
168 |     @identity
169 |     @identity
170 |     @identity
171 |     @identity
172 |     @identity
173 |     @identity
174 |     @identity
175 |     def bar(self): ...  # error: [invalid-explicit-override]
```

# Diagnostics

```
error[invalid-explicit-override]: Method `___reprrr__` is decorated with `@override` but does not override anything
  --> src/mdtest_snippet.pyi:98:5
   |
98 |     @override
   |     ---------
99 |     def ___reprrr__(self): ...  # error: [invalid-explicit-override]
   |         ^^^^^^^^^^^
info: No `___reprrr__` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `foo` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:100:5
    |
100 |     @override
    |     ---------
101 |     @classmethod
102 |     def foo(self): ...  # error: [invalid-explicit-override]
    |         ^^^
info: No `foo` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bar` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:104:5
    |
104 |     @override
    |     ---------
105 |     def bar(self): ...  # error: [invalid-explicit-override]
    |         ^^^
info: No `bar` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `baz` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:107:5
    |
107 |     @override
    |     ---------
108 |     def baz(): ...  # error: [invalid-explicit-override]
    |         ^^^
info: No `baz` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `eggs` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:109:5
    |
109 |     @override
    |     ---------
110 |     @staticmethod
111 |     def eggs(): ...  # error: [invalid-explicit-override]
    |         ^^^^
info: No `eggs` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bad_property1` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:113:5
    |
113 |     @override
    |     ---------
114 |     def bad_property1(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^
info: No `bad_property1` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bad_property2` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:115:5
    |
115 |     @override
    |     ---------
116 |     @property
117 |     def bad_property2(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^
info: No `bad_property2` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `bad_settable_property` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:119:5
    |
119 |     @override
    |     ---------
120 |     def bad_settable_property(self) -> int: ...  # error: [invalid-explicit-override]
    |         ^^^^^^^^^^^^^^^^^^^^^
info: No `bad_settable_property` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `lossy` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:124:5
    |
124 |     @override
    |     ---------
125 |     def lossy(self): ...  # error: [invalid-explicit-override]
    |         ^^^^^
info: No `lossy` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-explicit-override]: Method `lossy2` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:126:5
    |
126 |     @override
    |     ---------
127 |     @lossy_decorator
128 |     def lossy2(self): ...  # error: [invalid-explicit-override]
    |         ^^^^^^
info: No `lossy2` definitions were found on any superclasses of `Invalid`

```

```
error[invalid-method-override]: Invalid override of method `class_method1`
   --> src/mdtest_snippet.pyi:144:9
    |
144 |     def class_method1() -> int: ...  # error: [invalid-method-override]
    |         ^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.class_method1`
    |
   ::: src/mdtest_snippet.pyi:20:9
    |
 20 |     def class_method1(cls) -> int: ...
    |         ------------------------- `Parent.class_method1` defined here
info: `LiskovViolatingButNotOverrideViolating.class_method1` is a staticmethod but `Parent.class_method1` is a classmethod
info: This violates the Liskov Substitution Principle

```

```
error[invalid-explicit-override]: Method `bar` is decorated with `@override` but does not override anything
   --> src/mdtest_snippet.pyi:175:9
    |
175 |     def bar(self): ...  # error: [invalid-explicit-override]
    |         ^^^
    |
   ::: src/mdtest_snippet.pyi:156:5
    |
156 |     @override
    |     ---------
info: No `bar` definitions were found on any superclasses of `Foo`

```
